--- a/mystock.html
+++ b/mystock.html
@@ -8,8 +8,8 @@
 	
 	<link rel="shortcut icon" type="image/jpg" href="https://firebasestorage.googleapis.com/v0/b/myteestock.appspot.com/o/Images%2Ffavicon.ico?alt=media"/>
 	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="https://firebasestorage.googleapis.com/v0/b/myteestock.appspot.com/o/Images%2Fbootstrap.min.css?alt=media&token=6a1e646f-3425-4b85-895b-debd43e40e63">
+	<link rel="stylesheet" href="https://firebasestorage.googleapis.com/v0/b/myteestock.appspot.com/o/Images%2Fbootstrap-theme.min.css?alt=media&token=c33a5401-6268-4136-9fd9-426a696d00a2">
 	<style>
 		* {
   box-sizing: border-box;
